--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.orange.fr","creator":"http://perfmonkey.com","rand":0.17065145005472004,"created_at":"2015-06-05T13:18:51.348Z"}
